# cyberwave-edge-python

./: .env.example  .gitignore  MANIFEST.in  README.md  pyproject.toml
cyberwave_edge/: __init__.py  __main__.py  config.py  service.py
scripts/: cyberwave-edge.service  install.sh  uninstall.sh
tests/: __init__.py  test_config.py
